<?xml version="1.0" encoding="UTF-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fontFamily="Helvetica"
    android:orientation="vertical"
    android:shrinkColumns="*"
    android:stretchColumns="0, 1, 2, 3, 4"
    tools:context=".Standard">

    <!-- Display screen -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="end">

        <TextView
            android:id="@+id/displayDigits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="6"
            android:ellipsize="end"
            android:fontFamily="Helvetica"
            android:gravity="bottom|end"
            android:maxHeight="150dp"
            android:maxLines="2"
            android:minHeight="150dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/display"
            android:textColor="@color/digits"
            android:textSize="40sp" />

    </TableRow>

    <!-- First Row Buttons -->


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/ce"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/functions"
            android:text="@string/ce"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/c"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/functions"
            android:text="@string/c"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/mPlus"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/functions"
            android:text="@string/mPlus"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/mStore"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/functions"
            android:text="@string/mStore"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/mClear"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/functions"
            android:text="@string/mClear"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </TableRow>

    <!-- Second Row Buttons -->


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/seven"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/seven"
            android:textColor="@color/digits"
            android:textSize="25sp" />

        <Button
            android:id="@+id/eight"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/eight"
            android:textColor="@color/digits"
            android:textSize="25sp" />

        <Button
            android:id="@+id/nine"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/nine"
            android:textColor="@color/digits"
            android:textSize="25sp" />

        <Button
            android:id="@+id/mRestore"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:layout_span="2"
            android:layout_weight="1"
            android:background="@color/functions"
            android:text="@string/mRestore"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </TableRow>

    <!-- Third Row Buttons -->


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/four"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/four"
            android:textColor="@color/digits"
            android:textSize="25sp" />

        <Button
            android:id="@+id/five"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/five"
            android:textColor="@color/digits"
            android:textSize="25sp" />

        <Button
            android:id="@+id/six"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/six"
            android:textColor="@color/digits"
            android:textSize="25sp" />

        <Button
            android:id="@+id/plus"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/operations"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/divide"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/operations"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </TableRow>

    <!-- Fourth Row Buttons -->


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/one"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/one"
            android:textColor="@color/digits"
            android:textSize="25sp" />

        <Button
            android:id="@+id/two"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/two"
            android:textColor="@color/digits"
            android:textSize="25sp" />

        <Button
            android:id="@+id/three"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/three"
            android:textColor="@color/digits"
            android:textSize="25sp" />

        <Button
            android:id="@+id/subtract"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/operations"
            android:text="@string/subtract"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/multiply"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/operations"
            android:text="@string/multiply"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </TableRow>

    <!-- Fifth Row Buttons -->


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/square_root"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/square_root"
            android:textColor="@color/digits"
            android:textSize="25sp" />

        <Button
            android:id="@+id/zero"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/zero"
            android:textColor="@color/digits"
            android:textSize="25sp" />

        <Button
            android:id="@+id/dot"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/dot"
            android:textColor="@color/digits"
            android:textSize="25sp" />

        <Button
            android:id="@+id/equal"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_span="2"
            android:layout_weight="1"
            android:background="@color/result"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </TableRow>

    <!-- Sixth Row Button -->


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/scientific_mode"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="5"
            android:layout_weight="1"
            android:background="@color/modes"
            android:onClick="goToScientific"
            android:text="@string/scientific_mode"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </TableRow>

    <!-- Seventh Row Button -->


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/help_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_span="5"
            android:layout_weight="1"
            android:background="@color/alert"
            android:onClick="goToHelp"
            android:text="@string/help_btn"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </TableRow>

</TableLayout>